src/test/resources/errors/03-error.c
extern double bad_definition(int a, void b) {
    return 10;
}

